--- a/src/index.css
+++ b/src/index.css
@@ -187,13 +187,14 @@ select {
   align-items: center;
   border-radius: 5px;
   background-color: #f5da0e5b;
+  /* height: 5rem; */
+
   width: 90%;
   font-family: Josefin Sans;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 300;
   line-height: 54px;
   letter-spacing: 0em;
-  text-align: left;
   margin: 0;
   padding: 0 5px;
 }
